--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>R3vival — Shop</title>
 
 <!-- SellAuth embed (checkout modal) -->
-<script src="https://sellauth.com/assets/js/sellauth-embed-2.js"></script>
+<script src="https://app.lemonsqueezy.com/checkout.js" async></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
