--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>R3vival — Shop</title>
 
-<!-- SellAuth embed (checkout modal) -->
+<!-- LemonSqueezy Checkout -->
 <script src="https://app.lemonsqueezy.com/checkout.js" async></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -137,9 +137,7 @@
 </div>
 
 <script>
-/* -------------- PRODUCTS (with your variant IDs) -------------- */
-/* Replace image URLs with your real hosted images when available */
- const PRODUCTS = [
+const PRODUCTS = [
   { id:'p1', name: '“Blossom Tree” Heavyweight T-Shirt', productId:460427, price:30.00, image:'https://imagedelivery.net/HL_Fwm__tlvUGLZF2p74xw/b2438af1-b6c0-4a64-d236-ca0cec099800/public', sizes:{S:675063,M:805376,L:805377,XL:805378,'2XL':805382}, preorder:false },
   { id:'p2', name: '“The Search” Hoodie 460 GSM', productId:522462, price:49.99, image:'https://imagedelivery.net/HL_Fwm__tlvUGLZF2p74xw/7e5751eb-432a-4391-6fe1-112588414500/public', sizes:{S:793286,M:805401,L:805402,XL:805403,'2XL':805404}, preorder:false },
   { id:'p3', name: '“Jesus Christ” Heavyweight Tee', productId:525499, price:30.00, image:'https://imagedelivery.net/HL_Fwm__tlvUGLZF2p74xw/476f5e6b-9499-4b6c-20f5-60e02cfaf500/public', sizes:{S:798889,M:805410,L:805411,XL:805412,'2XL':805413}, preorder:false },
@@ -154,38 +152,29 @@
   { id:'p12', name: '“conclusion” Camo-Denim Jorts', productId:525656, price:64.99, image:'https://imagedelivery.net/HL_Fwm__tlvUGLZF2p74xw/3531e28b-001c-49ac-ecab-5c8868c49700/public', sizes:{S:799178,M:805480,L:805481,XL:805482,'2XL':805483}, preorder:false }
 ];
 
+let cart = [];
 
-const SHOP_ID = 179365;
-
-/* -------------- STATE -------------- */
-let cart = []; // { id, productId, variantId, name, price, img, qty }
-
-/* -------------- HELPERS -------------- */
 function formatPrice(n){ return '$' + Number(n || 0).toFixed(2); }
 function el(tag, attrs={}, children=[]){ const e=document.createElement(tag); for(const k in attrs) if(k==='html') e.innerHTML=attrs[k]; else e.setAttribute(k, attrs[k]); (Array.isArray(children)?children:[children]).forEach(c=>{ if(typeof c==='string') e.appendChild(document.createTextNode(c)); else if(c) e.appendChild(c)}); return e; }
 
-/* -------------- RENDER PRODUCTS -------------- */
 function renderProducts(){
   const grid = document.getElementById('productsGrid');
   grid.innerHTML = '';
   PRODUCTS.forEach(p=>{
     const card = el('div',{class:'product-card fade-in-up', style:'position:relative;'});
-    if (p.preorder){
-      card.appendChild(el('div',{class:'badge-pre'}, ['PREORDER']));
-    }
+    if (p.preorder) card.appendChild(el('div',{class:'badge-pre'}, ['PREORDER']));
     const img = el('img',{class:'product-img', src:p.image, alt:p.name});
     const title = el('div',{class:'product-title'}, [p.name]);
     const desc = el('div',{class:'product-desc'}, [p.description || '']);
     const price = el('div',{class:'price'}, [formatPrice(p.price)]);
     const actions = el('div',{class:'product-actions'});
-    const select = el('select',{class:'size-select', 'aria-label':'Size selector'});
-    // fill select with sizes using the keys order S M L XL 2XL
+    const select = el('select',{class:'size-select','aria-label':'Size selector'});
     const sizeOrder = ['S','M','L','XL','2XL'];
     sizeOrder.forEach(sz=>{
       const opt = el('option',{value:p.sizes[sz]}, [sz]);
       select.appendChild(opt);
     });
-    const addBtn = el('button',{class:'add-btn'}, [p.preorder ? 'Preorder' : 'Add to cart']);
+    const addBtn = el('button',{class:'add-btn'}, [p.preorder ? 'Preorder':'Add to cart']);
     addBtn.onclick = ()=>{
       const chosenVariant = select.value;
       addToCart({
@@ -199,25 +188,15 @@ function renderProducts(){
     };
     actions.appendChild(select);
     actions.appendChild(addBtn);
-
-    card.appendChild(img);
-    card.appendChild(title);
-    card.appendChild(desc);
-    card.appendChild(price);
-    card.appendChild(actions);
+    card.appendChild(img); card.appendChild(title); card.appendChild(desc); card.appendChild(price); card.appendChild(actions);
     grid.appendChild(card);
   });
 }
 
-/* -------------- CART -------------- */
 function addToCart(item){
-  // item: { id, productId, variantId, name, price, img }
-  // if same variant exists, increment qty
   const found = cart.find(i => String(i.variantId) === String(item.variantId));
-  if (found) found.qty++;
-  else cart.push({ id: item.id || Math.random().toString(36).slice(2,9), productId: item.productId, variantId: String(item.variantId), name: item.name, price: Number(item.price||0), img: item.img||'', qty:1 });
-  renderCart();
-  openCart();
+  if(found) found.qty++; else cart.push({id:item.id||Math.random().toString(36).slice(2,9), productId:item.productId, variantId:String(item.variantId), name:item.name, price:Number(item.price||0), img:item.img||'', qty:1});
+  renderCart(); openCart();
 }
 
 function renderCart(){
@@ -226,23 +205,22 @@ function renderCart(){
   let total = 0;
   cart.forEach((it, idx)=>{
     const row = el('div',{class:'cart-item'});
-    const img = el('img',{src: it.img || 'https://via.placeholder.com/400x300?text=No+Image', alt: it.name});
+    const img = el('img',{src:it.img||'https://via.placeholder.com/400x300?text=No+Image', alt:it.name});
     const info = el('div',{class:'cart-item-info'});
     info.innerHTML = `<div class="cart-item-title">${it.name}</div><div class="cart-item-price">${formatPrice(it.price)}</div>`;
     const controls = el('div',{class:'cart-controls'});
-    const minus = el('button',{class:'qty-btn'}, ['−']); minus.onclick = ()=>{ if(it.qty>1) it.qty--; else removeFromCart(idx); renderCart(); };
-    const qty = el('div',{}, [String(it.qty)]);
-    const plus = el('button',{class:'qty-btn'}, ['+']); plus.onclick = ()=>{ it.qty++; renderCart(); };
-    const remove = el('button',{class:'remove-btn'}, ['Remove']); remove.onclick = ()=>{ removeFromCart(idx); };
+    const minus = el('button',{class:'qty-btn'},['−']); minus.onclick = ()=>{ if(it.qty>1) it.qty--; else removeFromCart(idx); renderCart(); };
+    const qty = el('div',{},[String(it.qty)]);
+    const plus = el('button',{class:'qty-btn'},['+']); plus.onclick = ()=>{ it.qty++; renderCart(); };
+    const remove = el('button',{class:'remove-btn'},['Remove']); remove.onclick = ()=>{ removeFromCart(idx); };
     controls.appendChild(minus); controls.appendChild(qty); controls.appendChild(plus); controls.appendChild(remove);
-
     row.appendChild(img); row.appendChild(info); row.appendChild(controls);
     container.appendChild(row);
-    total += (it.price || 0) * it.qty;
+    total += (it.price||0) * it.qty;
   });
   document.getElementById('cartTotal').textContent = formatPrice(total);
+  const cc = document.getElementById('cartCount'); cc.textContent = cart.reduce((s,i)=>s+i.qty,0); cc.style.display = cart.length?'block':'none';
   document.getElementById('checkoutBtn').disabled = cart.length === 0;
-  const cc = document.getElementById('cartCount'); cc.textContent = cart.reduce((s,i)=>s+i.qty,0); cc.style.display = cart.length? 'block':'none';
 }
 
 function removeFromCart(index){ cart.splice(index,1); renderCart(); }
@@ -251,53 +229,26 @@ const drawer = document.getElementById('cartDrawer');
 function openCart(){ drawer.classList.add('open'); drawer.setAttribute('aria-hidden','false'); renderCart(); }
 function closeCart(){ drawer.classList.remove('open'); drawer.setAttribute('aria-hidden','true'); }
 
-/* -------------- CHECKOUT -------------- */
 function checkout(){
-  if (cart.length === 0) return alert('Cart is empty');
-  // verify all items have numeric productId and variantId
-  const invalid = cart.some(i => !i.productId || !i.variantId);
-  if (invalid){
-    // fallback: show summary and ask for contact
-    let s = 'Some items are missing direct checkout IDs. Order summary:\\n\\n';
-    cart.forEach(i=> s += `${i.name} x${i.qty} — ${formatPrice(i.price)}\\n`);
-    s += `\\nTotal: ${formatPrice(cart.reduce((t,i)=>t + i.price*i.qty,0))}\\n\\nPlease contact Revivalapparel@gmail.com to complete this order.`;
-    return alert(s);
-  }
-
-  const sellCart = cart.map(i=>({
-    productId: Number(i.productId),
-    variantId: Number(i.variantId),
-    quantity: i.qty
-  }));
-
-  if (!window.sellAuthEmbed) {
-    alert('SellAuth embed not loaded. Checkout cannot proceed.');
-    return;
-  }
-
-  try {
-    window.sellAuthEmbed.checkout(this, { cart: sellCart, shopId: SHOP_ID, modal: true });
-  } catch (e) {
-    console.error(e);
-    alert('Checkout failed. See console for details.');
-  }
+  if(cart.length === 0) return alert('Cart is empty');
+  const items = cart.map(i=>({product:Number(i.productId), variant:Number(i.variantId), quantity:i.qty}));
+  if(typeof LemonSqueezy === 'undefined') return alert('LemonSqueezy checkout not loaded');
+  LemonSqueezy.Checkout.open({ items: items });
 }
 
-/* -------------- NAV -------------- */
 function showPage(page){
-  document.getElementById('productsSection').style.display = 'none';
-  document.getElementById('aboutSection').style.display = 'none';
-  document.getElementById('contactSection').style.display = 'none';
+  document.getElementById('productsSection').style.display='none';
+  document.getElementById('aboutSection').style.display='none';
+  document.getElementById('contactSection').style.display='none';
   document.getElementById('nav-products').classList.remove('active');
   document.getElementById('nav-about').classList.remove('active');
   document.getElementById('nav-contact').classList.remove('active');
 
-  if (page === 'products'){ document.getElementById('productsSection').style.display = ''; document.getElementById('nav-products').classList.add('active'); }
-  else if (page === 'about'){ document.getElementById('aboutSection').style.display = ''; document.getElementById('nav-about').classList.add('active'); }
-  else if (page === 'contact'){ document.getElementById('contactSection').style.display = ''; document.getElementById('nav-contact').classList.add('active'); }
+  if(page==='products'){document.getElementById('productsSection').style.display=''; document.getElementById('nav-products').classList.add('active');}
+  else if(page==='about'){document.getElementById('aboutSection').style.display=''; document.getElementById('nav-about').classList.add('active');}
+  else if(page==='contact'){document.getElementById('contactSection').style.display=''; document.getElementById('nav-contact').classList.add('active');}
 }
 
-/* -------------- INIT -------------- */
 document.getElementById('cartButton').addEventListener('click', openCart);
 window.addEventListener('DOMContentLoaded', ()=>{
   renderProducts();
@@ -307,3 +258,4 @@ window.addEventListener('DOMContentLoaded', ()=>{
 </script>
 </body>
 </html>
+
